--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.19.2",
+    "multer": "^2.0.1",
+    "multer-s3": "^3.0.1",
     "node-fetch": "^2.7.0"
-    
   }
 }
-
