--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^2.0.1",
     "multer-s3": "^3.0.1",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^7.0.5",
     "pg": "^8.16.3"
   }
 }
